--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "homepage": "http://funnyprogrammer.github.io/funnyprogrammer.github.io",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
