--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.2.1",
-  "homepage": "./",
+  "homepage": "https://funnyprogrammer.github.io/projectnext",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
